additional resources wrapping fix

--- a/assets/stencil/_vars.scss
+++ b/assets/stencil/_vars.scss
@@ -23,6 +23,7 @@ $font-family-eina: 'Eina', 'Helvetica Neue', Helvetica, sans-serif;
 
 
 // Breakpoints
+$screen-md-max: 1104px;
 $screen-sm-max: 991px;
 $screen-xs-max: 767px;
 $screen-xxs-max: 480px;
